force-app/main/default/objects/Vehicule__c/fields/Capacite__c.field-meta.xml
<CustomField>
    <fullName>Capacite__c</fullName>
    <label>Capacite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>