force-app/main/default/objects/Vehicule__c/fields/Modele_annee__c.field-meta.xml
<CustomField>
    <fullName>Modele_annee__c</fullName>
    <label>Modele annee</label>
    <length>4</length>
    <type>Text</type>
</CustomField>