force-app/main/default/objects/Vehicule__c/fields/Nombre_de_personne__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_personne__c</fullName>
    <label>Nombre de personne</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>