force-app/main/default/objects/Vehicule__c/fields/Prix_achat_minimal__c.field-meta.xml
<CustomField>
    <fullName>Prix_achat_minimal__c</fullName>
    <label>Prix achat minimal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>