force-app/main/default/objects/Vehicule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carterpillar</fullName>
            </value>
            <value>
                <fullName>Infiniti</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>Citroen</fullName>
            </value>
            <value>
                <fullName>Mercerdes</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>Renault</fullName>
            </value>
            <value>
                <fullName>Peugeot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>