force-app/main/default/objects/Vehicule__c/fields/X4x4__c.field-meta.xml
<CustomField>
    <fullName>X4x4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>4x4</label>
    <type>Checkbox</type>
</CustomField>