force-app/main/default/objects/Vehicule__c/recordTypes/Utilitaire.recordType-meta.xml
<RecordType>
    <fullName>Utilitaire</fullName>
    <active>true</active>
    <label>Utilitaire</label>
</RecordType>