force-app/main/default/objects/Vehicule__c/recordTypes/Voiture.recordType-meta.xml
<RecordType>
    <fullName>Voiture</fullName>
    <active>true</active>
    <label>Voiture</label>
</RecordType>